  - Add word-wrap to issue title on issue and milestone boards (ClemMakesApps)
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Close open merge request without source project (Katarzyna Kobierska Ula Budziszewska)
  - Use a ConnectionPool for Rails.cache on Sidekiq servers
  - Replace `alias_method_chain` with `Module#prepend`
  - Preserve label filters when sorting !6136 (Joseph Frazier)
  - Only update issuable labels if they have been changed
  - Take filters in account in issuable counters. !6496
  - Revoke button in Applications Settings underlines on hover.
  - Add missing values to linter !6276 (Katarzyna Kobierska Ula Budziszewska)
  - Fix Long commit messages overflow viewport in file tree
  - Revert avoid touching file system on Build#artifacts?
  - Add broadcast messages and alerts below sub-nav
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Notify the Merger about merge after successful build (Dimitris Karakasilis)
  - Fix broken repository 500 errors in project list
  - Close todos when accepting merge requests via the API !6486 (tonygambone)

v 8.12.4 (unreleased)

v 8.12.3
  - Update Gitlab Shell to support low IO priority for storage moves

v 8.12.2 (unreleased)
  - Fix Import/Export not recognising correctly the imported services.
  - Fix snippets pagination
  - Fix "Create project" button layout when visibility options are restricted
  - Fix List-Unsubscribe header in emails
  - Fix IssuesController#show degradation including project on loaded notes
  - Fix an issue with the "Commits" section of the cycle analytics summary. !6513