@@ -86,14 +86,14 @@ feature 'Import/Export - project import integration test', feature: true, js: tr
       login_as(normal_user)
     end
 
-    scenario 'non-admin user is not allowed to import a project' do
+    scenario 'non-admin user is allowed to import a project' do
       expect(Project.all.count).to be_zero
 
       visit new_project_path
 
       fill_in :project_path, with: 'test-project-path', visible: true
 
-      expect(page).not_to have_content('GitLab export')
+      expect(page).to have_content('GitLab export')
     end
   end
 
